objects/AcctSeed__AP_Aging_History__c.object
<CustomObject>
    <description>Used to document the balance associated with an payable for a given accounting period.</description>
    <fields>
        <fullName>AcctSeed__Account_Payable__c</fullName>
        <inlineHelpText>Account Payable associated with this record.</inlineHelpText>
        <label>Payable</label>
        <referenceTo>AcctSeed__Account_Payable__c</referenceTo>
        <relationshipLabel>AP Aging History</relationshipLabel>
        <relationshipName>AP_Aging_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Period__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used to specify accounting period for financial reporting. Accounting period must have a value of &quot;Open&quot; in order to be selected.</inlineHelpText>
        <label>Accounting Period</label>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipLabel>AP Aging History</relationshipLabel>
        <relationshipName>AP_Aging_History</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Age__c</fullName>
        <formula>IF(AcctSeed__Days_Past_Due__c &lt;=0, &quot;0-Current&quot;, 
IF(AND(AcctSeed__Days_Past_Due__c&gt;0,AcctSeed__Days_Past_Due__c&lt;=30),&quot;1-30 Days&quot;, 
IF(AND(AcctSeed__Days_Past_Due__c&gt;30,AcctSeed__Days_Past_Due__c&lt;=60),&quot;31-60 Days&quot;, 
IF(AND(AcctSeed__Days_Past_Due__c&gt;60,AcctSeed__Days_Past_Due__c&lt;=90),&quot;61-90 Days&quot;, 
IF(AcctSeed__Days_Past_Due__c&gt;90,&quot;Over 90 Days&quot;, 
&quot;&quot;)))))</formula>
        <inlineHelpText>Denotes the age of the account payable for the given accounting period.</inlineHelpText>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <inlineHelpText>Balance of the account payable for the given accounting period.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Days_Past_Due__c</fullName>
        <formula>IF(AcctSeed__Period_End_Date__c-AcctSeed__Due_Date__c&gt;0,AcctSeed__Period_End_Date__c-AcctSeed__Due_Date__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days the account payable is past due. This is derived by subtracting the due date from the end date associated with the accounting period.</inlineHelpText>
        <label>Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Due_Date__c</fullName>
        <formula>AcctSeed__Account_Payable__r.AcctSeed__Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Due date associated with this account payable.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Period_End_Date__c</fullName>
        <formula>AcctSeed__Accounting_Period__r.AcctSeed__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The end date associated with the accounting period.</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <label>AP Aging History</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Account_Payable__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APH-{00000}</displayFormat>
        <label>AP Aging History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AP Aging History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>